rds.tf
# subnet group
resource "aws_db_subnet_group" "tf-rds-subnet-group" {
  name       = "${var.prefix}-${var.app_name}-db-subnet-group"
  subnet_ids = [aws_subnet.tf-ecs-rds-subnet-1.id, aws_subnet.tf-ecs-rds-subnet-2.id]
}

# password -> aws secrets manager
resource "random_password" "rds-db-password" {
  length           = 12
  special          = false
  override_special = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
}

#secret manager create 
resource "aws_secretsmanager_secret" "db-password" {
  name = "creds3/awslens/db"
}

# secret manager version
resource "aws_secretsmanager_secret_version" "rds-db-secret-version" {
  secret_id     = aws_secretsmanager_secret.db-password.id
  secret_string = jsonencode({
    username = aws_db_instance.postgres.username
    password = random_password.rds-db-password.result
    host     = aws_db_instance.postgres.address
    port     = aws_db_instance.postgres.port
    dbname   = aws_db_instance.postgres.db_name
  })

  depends_on = [ aws_db_instance.postgres ]
}

# rds instance
resource "aws_db_instance" "postgres" {
  identifier = "${var.prefix}-${var.app_name}-postgres-db"

  engine         = "postgres"
  engine_version = "16.13"
  instance_class = "db.t3.micro"

  allocated_storage = 20
  storage_type      = "gp2"

  db_name  = "awslensdb"
  username = "vaishakhprasad"
  password = random_password.rds-db-password.result

  publicly_accessible = false

  skip_final_snapshot = true

  # Networking (you MUST already have these)
  db_subnet_group_name   = aws_db_subnet_group.tf-rds-subnet-group.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
}
